argocd/ingress-argocd-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: "basic"
    # nginx.ingress.kubernetes.io/auth-secret: "argocd-basic-auth"
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Let op: basic-auth werkt alleen op HTTP/HTTPS, niet op gRPC endpoints
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.5.0/24,192.168.15.0/24"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.prjv.nl
      secretName: argocd-tls
  rules:
    - host: argocd.prjv.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
