argocd/ingressroute-argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.prjv.nl`)
      kind: Rule
      middlewares:
        - name: forwarded-headers
          namespace: argocd
      services:
        - name: argocd-server
          port: 80
          scheme: http
  tls:
    certResolver: letsencrypt
